# Moriahs_Travels

./: .env  README.md  docker-compose.yml
travels_backend/: .env  Cargo.toml  Dockerfile  README  diesel.toml
travels_backend/migrations/2025-01-16-175758_create_users/: up.sql
travels_backend/migrations/2025-01-16-175805_create_places/: up.sql
travels_backend/src/: diesel_types.rs  main.rs  models.rs  schema.rs
travels_backend/src/handlers/: auth.rs  places.rs
travels_backend/src/utils/: db.rs  jwt.rs  keyring.rs
travels_frontend/: .env  App.js  Dockerfile  README  app 2.json  app.json  babel.config.js  dependencies_backup.txt  index.js  metro.config.js  package-lock 2.json  package-lock.json  package.json  travels_frontend-v1.0.0.tgz
travels_frontend/navigation/: mainNavigator.js
travels_frontend/screens/auth/: loginScreen.js  signUpScreen.js  welcomeScreen.js
travels_frontend/screens/main/: mapScreen.js  placeDetails.js  traveledTo.js  wantToTravel.js
travels_frontend/src/navigation/: appNavigator.js  authNavigator.js
travels_frontend/src/screens/auth/: loginScreen.js  signUpScreen.js  welcomeScreen.js
travels_frontend/src/screens/main/: addPlaceTraveledScreen.js  addPlaceWantScreen.js  editPlacesScreen.js  mainMenuScreen.js  mapScreen.js  mapScreen.web.js  mapScreenWeb.js  placeDetails.js  traveledTo.js  wantToTravel.js
travels_frontend/src/utils/: api.js  location.js  storage.js
travels_frontend/utils/: storage.js
