[package]
name = "travels_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.0", features = ["mysql", "r2d2"] }
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"
argon2 = "0.4"
rand = "0.8"