[package]
name = "travels_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "travels_backend"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.0", features = ["mysql", "chrono", "bigdecimal", "r2d2"] }
bigdecimal = { version = "0.4", features = ["serde"] }
diesel-derive-newtype = "2.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"
argon2 = "0.4"
rand = "0.8"